--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus.conf
@@ -2,29 +2,32 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="1520";
+      repetitions="1440";
 # name of this lp changes according to the model
-      nw-lp="8";
+      nw-lp="4";
 # these lp names will be the same for dragonfly-custom model
-      modelnet_dragonfly_custom="8";
+      modelnet_dragonfly_plus="4";
+      modelnet_dragonfly_plus_router="1";
    }
 }
 PARAMS
 {
 # packet size in the network
    packet_size="1024";
+   modelnet_order=( "dragonfly_plus","dragonfly_plus_router" );
+   # scheduler options
+   modelnet_scheduler="fcfs";
 # chunk size in the network (when chunk size = packet size, packets will not be
 # divided into chunks)
    chunk_size="1024";
-# ROSS message size
-   message_size="608";
-# scheduler options
-   modelnet_scheduler="fcfs";
-   modelnet_order=( "dragonfly_plus", "dragonfly_plus_router");
-# number of fattree levels in each group - DFP design specs 2
-   num_levels="2";
-# number of groups in the network
-   num_groups="38";
+   # modelnet_scheduler="round-robin";
+   # number of routers within each group
+   # each router row corresponds to a chassis in Cray systems
+   num_router_rows="6";
+   # each router column corresponds to a slot in a chassis
+   num_router_cols="16";
+   # number of groups in the network
+   num_groups="15";
 # buffer size in bytes for local virtual channels
    local_vc_size="8192";
 #buffer size in bytes for global virtual channels
@@ -37,18 +40,17 @@ PARAMS
    global_bandwidth="1.5";
 # bandwidth in GiB/s for compute node-router channels
    cn_bandwidth="8.0";
+# ROSS message size
+   message_size="608";
 # number of compute nodes connected to router, dictated by dragonfly config
 # file
-   num_cns_per_router="8";
+   num_cns_per_router="4";
 # number of global channels per router
-   num_global_channels="4";
+   num_global_channels="10";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-custom";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-edison";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-custom";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-edison";
 # routing protocol to be used
-   routing="prog-adaptive";
-
-
-
+   routing="minimal";
 }
