Include dragonfly plus in build process

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -191,6 +191,8 @@ bin_PROGRAMS += src/network-workloads/model-net-synthetic
 bin_PROGRAMS += src/network-workloads/model-net-synthetic-custom-dfly
 bin_PROGRAMS += src/network-workloads/model-net-synthetic-slimfly
 bin_PROGRAMS += src/network-workloads/model-net-synthetic-fattree
+bin_PROGRAMS += src/network-workloads/model-net-synthetic-dfly-plus
+
 
 src_workload_codes_workload_dump_SOURCES = \
  src/workload/codes-workload-dump.c
@@ -203,6 +205,7 @@ src_network_workloads_model_net_mpi_replay_SOURCES = \
 src_network_workloads_model_net_mpi_replay_CFLAGS = $(AM_CFLAGS)
 src_network_workloads_model_net_synthetic_SOURCES = src/network-workloads/model-net-synthetic.c
 src_network_workloads_model_net_synthetic_custom_dfly_SOURCES = src/network-workloads/model-net-synthetic-custom-dfly.c
+src_network_workloads_model_net_synthetic_dfly_plus_SOURCES = src/network-workloads/model-net-synthetic-dfly-plus.c
 src_networks_model_net_topology_test_SOURCES = src/networks/model-net/topology-test.c
 
 #bin_PROGRAMS += src/network-workload/codes-nw-test
