Dragonfly Plus: Model, Workload, and Config change

--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
@@ -30,6 +30,10 @@ PARAMS
    num_level_chans="1";
    # number of groups in the network
    num_groups="4";
+
+# predefined threshold (T) deciding when to reassign packet to a lower priority queue
+   queue_threshold="50";
+
 # buffer size in bytes for local virtual channels
    local_vc_size="8192";
 #buffer size in bytes for global virtual channels
