--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
@@ -2,7 +2,7 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="16";
+      repetitions="12";
 # name of this lp changes according to the model
       nw-lp="4";
 # these lp names will be the same for dragonfly-custom model
@@ -29,7 +29,7 @@ PARAMS
    # number of links connecting between group levels per router
    num_level_chans="1";
    # number of groups in the network
-   num_groups="4";
+   num_groups="3";
 
 # predefined threshold (T) deciding when to reassign packet to a lower priority queue
    queue_threshold="50";
@@ -52,7 +52,7 @@ PARAMS
 # file
    num_cns_per_router="4";
 # number of global channels per router
-   num_global_channels="4";
+   num_global_connections="4";
 # network config file for intra-group connections
    intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra";
 # network config file for inter-group connections
