Dragonfly Plus: Update example configurations

--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus.conf
@@ -2,12 +2,12 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="1440";
+      repetitions="12";
 # name of this lp changes according to the model
       nw-lp="4";
 # these lp names will be the same for dragonfly-custom model
       modelnet_dragonfly_plus="4";
-      modelnet_dragonfly_plus_router="1";
+      modelnet_dragonfly_plus_router="2";
    }
 }
 PARAMS
@@ -23,11 +23,17 @@ PARAMS
    # modelnet_scheduler="round-robin";
    # number of routers within each group
    # each router row corresponds to a chassis in Cray systems
-   num_router_rows="6";
+   num_router_spine="4";
    # each router column corresponds to a slot in a chassis
-   num_router_cols="16";
+   num_router_leaf="4";
+   # number of links connecting between group levels per router
+   num_level_chans="1";
    # number of groups in the network
-   num_groups="15";
+   num_groups="3";
+
+# predefined threshold (T) deciding when to reassign packet to a lower priority queue
+   queue_threshold="50";
+
 # buffer size in bytes for local virtual channels
    local_vc_size="8192";
 #buffer size in bytes for global virtual channels
@@ -46,11 +52,11 @@ PARAMS
 # file
    num_cns_per_router="4";
 # number of global channels per router
-   num_global_channels="10";
+   num_global_connections="4";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-edison";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-edison";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-inter";
 # routing protocol to be used
-   routing="minimal";
+   routing="non-minimal-leaf";
 }
