--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-plus-testing.conf
@@ -2,12 +2,12 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="12";
+      repetitions="5";
 # name of this lp changes according to the model
       nw-lp="4";
 # these lp names will be the same for dragonfly-custom model
       modelnet_dragonfly_plus="4";
-      modelnet_dragonfly_plus_router="2";
+      modelnet_dragonfly_plus_router="4";
    }
 }
 PARAMS
@@ -23,13 +23,13 @@ PARAMS
    # modelnet_scheduler="round-robin";
    # number of routers within each group
    # each router row corresponds to a chassis in Cray systems
-   num_router_spine="4";
+   num_router_spine="2";
    # each router column corresponds to a slot in a chassis
-   num_router_leaf="4";
+   num_router_leaf="2";
    # number of links connecting between group levels per router
    num_level_chans="1";
    # number of groups in the network
-   num_groups="3";
+   num_groups="5";
 
 # predefined threshold (T) deciding when to reassign packet to a lower priority queue
    queue_threshold="50";
@@ -50,13 +50,13 @@ PARAMS
    message_size="608";
 # number of compute nodes connected to router, dictated by dragonfly config
 # file
-   num_cns_per_router="4";
-# number of global channels per router
-   num_global_connections="4";
+   num_cns_per_router="2";
+# number of global ports per router
+   num_global_connections="2";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra-large";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-inter";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-inter-large";
 # routing protocol to be used
    routing="minimal";
 }
