Reorganize DFP Config Files

--- a/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-testing.conf
+++ b/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-testing.conf
@@ -54,9 +54,9 @@ PARAMS
 # number of global ports per router
    num_global_connections="2";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra-large";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-intra-large";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-inter-large";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-inter-large";
 # routing protocol to be used
-   routing="minimal";
+   routing="non-minimal-spine";
 }
