--- a/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus.conf
+++ b/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus.conf
@@ -54,9 +54,9 @@ PARAMS
 # number of global channels per router
    num_global_connections="4";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-intra";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-intra";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/neil-inter";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-inter";
 # routing protocol to be used
-   routing="non-minimal-leaf";
+   routing="minimal";
 }
