--- a/maint/codes.pc.in
+++ b/maint/codes.pc.in
@@ -14,11 +14,15 @@ python_cflags=@PYTHON_CFLAGS@
 python_libs=@PYTHON_LIBS@
 boost_cflags=@BOOST_CFLAGS@
 boost_libs=@BOOST_LIBS@
+argobots_libs=@ARGOBOTS_LIBS@
+argobots_cflags=@ARGOBOTS_CFLAGS@
+swm_libs=@SWM_LIBS@
+swm_cflags=@SWM_CFLAGS@
 
 Name: codes-base
 Description: Base functionality for CODES storage simulation
 Version: @PACKAGE_VERSION@
 URL: http://trac.mcs.anl.gov/projects/CODES
 Requires:
-Libs: -L${libdir} -lcodes ${ross_libs} ${darshan_libs} ${dumpi_libs} ${cortex_libs}
-Cflags: -I${includedir} ${ross_cflags} ${darshan_cflags} ${dumpi_cflags} ${cortex_cflags}
+Libs: -L${libdir} -lcodes ${ross_libs} ${argobots_libs} ${swm_libs} ${darshan_libs} ${dumpi_libs} ${cortex_libs}
+Cflags: -I${includedir} ${swm_datarootdir} ${ross_cflags} ${darshan_cflags} ${swm_cflags} ${argobots_cflags} ${dumpi_cflags} ${cortex_cflags}
