--- a/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-testing-large.conf
+++ b/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-testing-large.conf
@@ -58,5 +58,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-inter-large";
 # routing protocol to be used
-   routing="non-minimal-spine";
+   routing="non-minimal-leaf";
 }
