Dragonfly Plus Config: 34k node topology and files

--- a/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-med-34k.conf
+++ b/src/network-workloads/conf/dragonfly-plus/modelnet-test-dragonfly-plus-med-34k.conf
@@ -58,5 +58,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/neil-34k-inter";
 # routing protocol to be used
-   routing="non-minimal-leaf";
+   routing="on-the-fly-adaptive";
 }
