Updated Config for 'on-the-fly-adaptive'->'prog-adaptive'

--- a/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
@@ -55,7 +55,7 @@ PARAMS
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp-test-inter";
 # routing protocol to be used
 #    routing="minimal";
-   routing="on-the-fly-adaptive";
+   routing="prog-adaptive";
 # route scoring protocol to be used - options are 'alpha' or 'beta'
    route_scoring_metric="beta";
 
