adding configuration changes to make simulation runtime shorter

--- a/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
+++ b/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
@@ -14,13 +14,13 @@ PARAMS
 {
    df-dally-vc = "1";
 # packet size in the network
-   packet_size="1024";
+   packet_size="4096";
    modelnet_order=( "dragonfly_custom","dragonfly_custom_router" );
    # scheduler options
    modelnet_scheduler="fcfs";
 # chunk size in the network (when chunk size = packet size, packets will not be
 # divided into chunks)
-   chunk_size="1024";
+   chunk_size="4096";
    # modelnet_scheduler="round-robin";
 
    num_router_rows="1";
@@ -29,11 +29,11 @@ PARAMS
    # number of groups in the network
    num_groups="65";
 # buffer size in bytes for local virtual channels
-   local_vc_size="8192";
+   local_vc_size="32768";
 #buffer size in bytes for global virtual channels
-   global_vc_size="16384";
+   global_vc_size="32768";
 #buffer size in bytes for compute node virtual channels
-   cn_vc_size="8192";
+   cn_vc_size="32768";
 #bandwidth in GiB/s for local channels
    local_bandwidth="25.0";
 # bandwidth in GiB/s for global channels
@@ -57,5 +57,5 @@ PARAMS
    inter-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
 # routing protocol to be used
 #    routing="minimal";
-   routing="adaptive";
+   routing="prog-adaptive";
 }
