Update DFP configuration for correct scoring metric

--- a/src/network-workloads/conf/dragonfly-custom/dfp_8k.conf
+++ b/src/network-workloads/conf/dragonfly-custom/dfp_8k.conf
@@ -56,6 +56,6 @@ PARAMS
 # routing protocol to be used
    routing="prog-adaptive";
 # route scoring protocol to be used - options are 'alpha' or 'beta'
-   route_scoring_metric="delta";
+   route_scoring_metric="alpha";
 
 }
