Adjusted build process for boost - needs refinement before merge to main

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,8 @@ EXTRA_PROGRAMS =
 CLEANFILES = $(bin_SCRIPTS)
 EXTRA_DIST =
 BUILT_SOURCES =
+AM_LDFLAGS =
+
 
 # pkgconfig files
 pkgconfigdir = $(libdir)/pkgconfig
