--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -1,5 +1,9 @@
 lib_LTLIBRARIES += src/libcodes.la src/libcodes_mpi_replay.la
 
+AM_CPPFLAGS += $(BOOST_CPPFLAGS)
+AM_LDFLAGS += $(BOOST_LDFLAGS)
+
+
 BUILT_SOURCES += src/modelconfig/configparser.h \
                  src/modelconfig/configlex.h
 
