--- a/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
+++ b/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
@@ -12,6 +12,8 @@ LPGROUPS
 }
 PARAMS
 {
+   adaptive_threshold="8192";
+   minimal-bias="1";
    df-dally-vc = "1";
 # packet size in the network
    packet_size="4096";
@@ -45,16 +47,16 @@ PARAMS
 # Number of column channels
    num_col_chans="1";
 # ROSS message size
-   message_size="624";
+   message_size="640";
 # number of compute nodes connected to router, dictated by dragonfly config
 # file
    num_cns_per_router="8";
 # number of global channels per router
    num_global_channels="8";
 # network config file for intra-group connections
-   intra-group-connections="/Users/mmubarak/Documents/software_development/codes-neil/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_intra";
+   intra-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_intra";
 # network config file for inter-group connections
-   inter-group-connections="/Users/mmubarak/Documents/software_development/codes-neil/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
+   inter-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
 # routing protocol to be used
 #    routing="minimal";
    routing="prog-adaptive";
