Adding Verification methods to DFP

--- a/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
@@ -55,8 +55,8 @@ PARAMS
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp-test-inter";
 # routing protocol to be used
 #    routing="minimal";
-   routing="prog-adaptive";
+   routing="non-minimal-leaf";
 # route scoring protocol to be used - options are 'alpha' or 'beta'
-   route_scoring_metric="beta";
+   route_scoring_metric="alpha";
 
 }
