Revert "Merge branch 'dfp-online-workloads-broken' into 'dfp-online-workloads'"
This reverts merge request !10

--- a/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
@@ -55,8 +55,8 @@ PARAMS
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp-test-inter";
 # routing protocol to be used
 #    routing="minimal";
-   routing="non-minimal-leaf";
+   routing="prog-adaptive";
 # route scoring protocol to be used - options are 'alpha' or 'beta'
-   route_scoring_metric="alpha";
+   route_scoring_metric="beta";
 
 }
