local commit for spine limiter

--- a/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
+++ b/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
@@ -13,7 +13,7 @@ LPGROUPS
 PARAMS
 {
    adaptive_threshold="8192";
-   minimal-bias="1";
+#  minimal-bias="1";
    df-dally-vc = "1";
 # packet size in the network
    packet_size="4096";
@@ -58,6 +58,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
 # routing protocol to be used
-#    routing="minimal";
    routing="prog-adaptive";
 }
