Adding functional QoS in sequential mode for the 1-D dragonfly

--- a/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
+++ b/src/network-workloads/conf/dragonfly-custom/dfdally_8k.conf
@@ -31,17 +31,17 @@ PARAMS
    # number of groups in the network
    num_groups="65";
 # buffer size in bytes for local virtual channels
-   local_vc_size="32768";
+   local_vc_size="16384";
 #buffer size in bytes for global virtual channels
-   global_vc_size="32768";
+   global_vc_size="16384";
 #buffer size in bytes for compute node virtual channels
    cn_vc_size="32768";
 #bandwidth in GiB/s for local channels
-   local_bandwidth="25.0";
+   local_bandwidth="2.0";
 # bandwidth in GiB/s for global channels
-   global_bandwidth="25.0";
+   global_bandwidth="2.0";
 # bandwidth in GiB/s for compute node-router channels
-   cn_bandwidth="25.0";
+   cn_bandwidth="2.0";
 # Number of row channels
    num_row_chans="1";
 # Number of column channels
@@ -54,9 +54,9 @@ PARAMS
 # number of global channels per router
    num_global_channels="8";
 # network config file for intra-group connections
-   intra-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_intra";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/dfdally_8k_intra";
 # network config file for inter-group connections
-   inter-group-connections="/home/mubarak/codes-online/codes/src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/dfdally_8k_inter";
 # routing protocol to be used
    routing="prog-adaptive";
 }
