simplifying rng calls in dragonfly-custom reverse handler

--- a/src/network-workloads/conf/dragonfly-plus/dfp_1k.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp_1k.conf
@@ -41,15 +41,15 @@ PARAMS
 # bandwidth in GiB/s for compute node-router channels
    cn_bandwidth="25.0";
 # ROSS message size
-   message_size="640";
+   message_size="656";
 # number of compute nodes connected to router, dictated by dragonfly config file
    num_cns_per_router="12";
 # number of global channels per router
    num_global_connections="12";
 # network config file for intra-group connections
-   intra-group-connections="PATH_TO/dfp_1k_intra";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp_1k_intra";
 # network config file for inter-group connections
-   inter-group-connections="PATH_TO/dfp_1k_inter";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp_1k_inter";
 # routing protocol to be used - 'minimal', 'non-minimal-spine', 'non-minimal-leaf', 'prog-adaptive'
    routing="prog-adaptive";
 # route scoring protocol to be used - options are 'alpha', 'beta', or 'delta' - 'gamma' has been deprecated
