adding time-stepped series data for mpi-replay and network models

--- a/src/network-workloads/conf/dragonfly-plus/dfp_1k.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp_1k.conf
@@ -4,7 +4,7 @@ LPGROUPS
    {
       repetitions="168";
 # name of this lp changes according to the model
-      nw-lp="6";
+      nw-lp="12";
 # these lp names will be the same for dragonfly-custom model
       modelnet_dragonfly_plus="6";
       modelnet_dragonfly_plus_router="1";
@@ -35,11 +35,15 @@ PARAMS
 # buffer size in bytes for compute node virtual channels
    cn_vc_size="32768";
 # bandwidth in GiB/s for local channels
-   local_bandwidth="25.0";
+   local_bandwidth="2.0";
+# number of qos levels
+   num_qos_levels="2";
+# bandwidth of each qos level
+   qos_bandwidth="10,90";
 # bandwidth in GiB/s for global channels
-   global_bandwidth="25.0";
+   global_bandwidth="2.0";
 # bandwidth in GiB/s for compute node-router channels
-   cn_bandwidth="25.0";
+   cn_bandwidth="2.0";
 # ROSS message size
    message_size="656";
 # number of compute nodes connected to router, dictated by dragonfly config file
@@ -51,7 +55,7 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-plus/dfp_1k_inter";
 # routing protocol to be used - 'minimal', 'non-minimal-spine', 'non-minimal-leaf', 'prog-adaptive'
-   routing="prog-adaptive";
+   routing="minimal";
 # route scoring protocol to be used - options are 'alpha', 'beta', or 'delta' - 'gamma' has been deprecated
    route_scoring_metric="delta";
 # minimal route threshold before considering non-minimal paths
