removing boost package

--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ LT_INIT
 
 
 #WRAP SOME OPTION AROUND THIS - IT'S NOT REQUIRED FOR 99% OF CODES
-AX_BOOST_BASE([1.66])
+#AX_BOOST_BASE([1.66])
 
 AC_CANONICAL_TARGET
 AC_CANONICAL_SYSTEM
