--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -105,8 +105,7 @@ nobase_include_HEADERS = \
 	codes/net/express-mesh.h \
 	codes/net/torus.h \
     codes/codes-mpi-replay.h \
-	codes/configfile.h \
-    codes/codes-conc-addon.h
+	codes/configfile.h
 
 
 #codes/codes-nw-workload.h
@@ -152,7 +151,6 @@ src_libcodes_la_SOURCES =  \
 	src/util/codes-mapping-context.c \
   	src/util/codes-comm.c \
     src/workload/codes-workload.c \
-    src/workload/codes-conc-addon.c \
     src/workload/methods/codes-iolang-wrkld.c \
     src/workload/methods/codes-checkpoint-wrkld.c \
     src/workload/methods/test-workload-method.c \
