updating CODES build due to ROSS/RISA build changes

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,6 +89,6 @@ LDADD += ${DUMPI_LIBS}
 endif
 
 if USE_RDAMARIS
-AM_CPPFLAGS += ${ROSS_Damaris_CFLAGS} -DUSE_RDAMARIS=1
-LDADD += ${ROSS_Damaris_LIBS}
+AM_CPPFLAGS += ${RISA_CFLAGS} -DUSE_RDAMARIS=1
+LDADD += ${RISA_LIBS}
 endif
