Update all usage of "server" lp to "nw-lp"
Update all usage of "server" lp to "nw-lp"

This change is made for consistency across all configuration files
and workload generators in core CODES. Where older models and versions
of CODES utilized the "server" identifier to specify the number of
server LPs per modelnet group repetition, newer models and
configurations utilized the less paradigm specific "nw-lp" identifier.

This shift slightly fractured the codebase and led to confusion when
running similar/same configurations across different network models.

Specifically, this change converts all usage of the "server" identifier
to the "nw-lp" identifier. All tests, existing default configuration
files, and models have been updated to use the "nw-lp" identifier for
the workload server LPs. Some docs and readmes have been updated as well
to no longer instruct new users to use the "server" identifier.

--- a/scripts/example/example.template
+++ b/scripts/example/example.template
@@ -3,14 +3,14 @@
 # of application- and codes-specific key-value pairs. 
 LPGROUPS
 {
-   # in our simulation, we simply have a set of servers, each with 
+   # in our simulation, we simply have a set of servers (nw-lp), each with 
    # point-to-point access to each other
    SERVERS
    {
       # required: number of times to repeat the following key-value pairs
       repetitions="C_NUM_SERVERS"; 
       # application-specific: parsed in main
-      server="1";
+      nw-lp="1";
       # model-net-specific field defining the network backend. In this example, 
       # each server has one NIC, and each server are point-to-point connected
       modelnet_simplenet="1";
