--- a/src/network-workloads/conf/dragonfly-dally/dfdally_8k.conf
+++ b/src/network-workloads/conf/dragonfly-dally/dfdally_8k.conf
@@ -21,11 +21,7 @@ PARAMS
 # divided into chunks)
    chunk_size="4096";
    # modelnet_scheduler="round-robin";
-
-   num_router_rows="1";
-   # intra-group columns for routers
-   num_router_cols="16";
-   # number of groups in the network
+   num_routers="16";
    num_groups="65";
 # buffer size in bytes for local virtual channels
    local_vc_size="16384";
@@ -56,7 +52,6 @@ PARAMS
    inter-group-connections="../src/network-workloads/conf/dragonfly-dally/dfdally_8k_inter";
 # routing protocol to be used
    routing="prog-adaptive";
-   adaptive_threshold="131072";
-   minimal-bias="1";
-   df-dally-vc = "1";
+   adaptive_threshold="1024";
+   route_scoring_metric="delta";
 }
