Update codes.pc project URL

--- a/maint/codes.pc.in
+++ b/maint/codes.pc.in
@@ -23,7 +23,7 @@ swm_datarootdir=@SWM_DATAROOTDIR@
 Name: codes-base
 Description: Base functionality for CODES storage simulation
 Version: @PACKAGE_VERSION@
-URL: http://trac.mcs.anl.gov/projects/CODES
+URL: https://github.com/codes-org/codes
 Requires:
 Libs: -L${libdir} -lcodes ${ross_libs} ${argobots_libs} ${swm_libs} ${darshan_libs} ${dumpi_libs} ${cortex_libs}
 Cflags: -I${includedir} -I${swm_datarootdir} ${ross_cflags} ${darshan_cflags} ${swm_cflags} ${argobots_cflags} ${dumpi_cflags} ${cortex_cflags}
