Slim Fly updates - Multi Rail Slim Fly
* Bring in latest slimfly synth from fitfly repo

This is a merge of the latest version of the slimfly
synthetic workload generator from Noah's fitfly specific codes
fork.

Most changes are "accept fitfly repo version" rule but a couple
changes were made to reflect changes made to the original version
that weren't also made to the forked version at the time.

* Bring in updated slimfly model from fitfly fork

This commit brings in changes that were made to the slimfly
model by Noah since his fork to add support of the fitfly
variant. This introduces dual-rail/dual-plane behavior. It
should not interfere with single-rail/plane behavior of
the model if configured that way.

Almost all changes were incremental with only a few changes from
mainline that were brought in - specifically vis api and damaris
support changes.

* Fix slimfly tests

When converting slimfly version to support fitfly, the names of the
workload LPs changed to nw-lp.

Additionally, changing the default sf_type to be 0 (slimfly) instead
of 1 (fitfly)

* Bring in codes changes for multi-injection

This commit brings in changes from Noah's fitfly fork. The changes
are all in the realm of allowing for multiple injection queues
in model terminals.

* Add model-net-synthetic-all to build

* fixes - comment out single proc calloc for heat map

* Include fix for injection throttling

* Undo last commit that breaks optimistic

The last commit that fixes the injection rate for dual plane
breaks optimisitc as it's a hack and not really valid. Rolling
it back while I try and find a legal way around it.

* dual rail rc fixes, malloc->calloc, inits

* small changes to slimfly/fitfly

* Slimfly Router Model Net Events Adaptation

* Slimfly/Fitfly RC Fixes - optimistic works

Prior to this commit, multi-rail slimfly was not working in optimistic
mode. Since it worked in sequential and conservative the issue was
surely 

--- a/tests/conf/modelnet-test-slimfly.conf
+++ b/tests/conf/modelnet-test-slimfly.conf
@@ -5,13 +5,13 @@ LPGROUPS
       repetitions="50";
       nw-lp="3";
       modelnet_slimfly="3";
-      slimfly_router="1";
+      modelnet_slimfly_router="1";
    }
 }
 PARAMS
 {
    packet_size="512";
-   modelnet_order=( "slimfly");
+   modelnet_order=( "slimfly", "slimfly_router");
    # scheduler options
    modelnet_scheduler="fcfs";
    chunk_size="256";
