--- a/src/network-workloads/conf/dragonfly-dally/dfdally_72.conf
+++ b/src/network-workloads/conf/dragonfly-dally/dfdally_72.conf
@@ -45,7 +45,7 @@ PARAMS
 # number of global channels per router
    num_global_channels="2";
 # network config file for intra-group connections
-   intra-group-connections="../src/network-workloads/conf/dragonfly-dally/dfdally-72-intra"
+   intra-group-connections="../src/network-workloads/conf/dragonfly-dally/dfdally-72-intra";
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-dally/dfdally-72-inter";
 # routing protocol to be used
